# csrankings-manchester

./: setup.cfg  staff-cs.csv  staff-cs.json
src/csrank/: __init__.py
