[metadata]
name = csrankings-manchester
version = 0.1.0
license = Apache License, version 2.0 (Apache-2.0)
description = csrankings exporter for The University of Manchester
long_description = import cs.manchester.ac.uk staff to csrankings
long_description_content_type = text/x-rst
keywords = ro-crate, workflow, provenance, CWL
classifiers = 
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Science/Research
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.10
author = Stian Soiland-Reyes
author_email = soiland-reyes@manchester.ac.uk
url = https://github.com/stain/csrankings-manchester

[options]
zip_safe=False
include_package_data=True
packages=
    csrank
package_dir=
    =src

python_requires=>=3.10, <4

install_requires=
    beautifulsoup4>=4.10
    requests>=2.28.1
    scholarly>=1.7.11

[options.entry_points]
console_scripts=
    csrank=csrank:main

[options.packages.find]
where=src

[flake8]
ignore = E501
